<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/wishlist_icon"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_pemasukan"
        android:icon="@drawable/pemasukan_icon"
        android:title="@string/title_pemasukan" />

    <item
        android:id="@+id/navigation_pengeluaran"
        android:icon="@drawable/pengeluaran_icon"
        android:title="@string/title_pengeluaran" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_profil" />

</menu>
